@@ -8,9 +8,16 @@ import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.ai.attributes.AttributeModifier;
+import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.item.enchantment.EnchantmentCategory;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
+import net.minecraftforge.event.ItemAttributeModifierEvent;
 import net.minecraftforge.event.entity.living.LivingHurtEvent;
+
+import static com.foolsix.fancyenchantments.enchantment.util.EnchIDs.HEAVY_BLOW_NAME;
+import static com.foolsix.fancyenchantments.enchantment.util.EnchIDs.HEAVY_BLOW_UUID;
+import static com.foolsix.fancyenchantments.enchantment.util.EnchUtils.MOD_NAME_PREFIX;
 
 public class HeavyBlow extends TerraEnchantment {
     private static final ModConfig.HeavyBlowOptions CONFIG = FancyEnchantments.getConfig().heavyBlowOptions;
@@ -39,6 +46,12 @@ public class HeavyBlow extends TerraEnchantment {
                     e.setAmount((float) (e.getAmount() * (1 + CONFIG.damageMultiplier * level)));
                 }
             }
+        }
+    }
+
+    public void attackSpeedReduce(ItemAttributeModifierEvent e) {
+        if (e.getItemStack().getEnchantmentLevel(this) > 0 && e.getSlotType() == EquipmentSlot.MAINHAND) {
+            e.addModifier(Attributes.ATTACK_SPEED, new AttributeModifier(HEAVY_BLOW_UUID, MOD_NAME_PREFIX + HEAVY_BLOW_NAME, -CONFIG.speedReducer, AttributeModifier.Operation.MULTIPLY_BASE));
         }
     }
 }
