@@ -4,18 +4,16 @@ import com.foolsix.fancyenchantments.FancyEnchantments;
 import com.foolsix.fancyenchantments.enchantment.EssentiaEnch.TerraEnchantment;
 import com.foolsix.fancyenchantments.util.ModConfig;
 import net.minecraft.world.entity.EquipmentSlot;
-import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.ai.attributes.AttributeInstance;
 import net.minecraft.world.entity.ai.attributes.AttributeModifier;
 import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.ShieldItem;
 import net.minecraft.world.item.enchantment.EnchantmentCategory;
-import net.minecraft.world.item.enchantment.EnchantmentHelper;
-import net.minecraftforge.common.ToolActions;
-import net.minecraftforge.event.entity.living.LivingEvent;
+import net.minecraftforge.event.ItemAttributeModifierEvent;
 
 import static com.foolsix.fancyenchantments.enchantment.util.EnchIDs.SOLID_AS_A_ROCK_NAME;
 import static com.foolsix.fancyenchantments.enchantment.util.EnchIDs.SOLID_AS_A_ROCK_UUID;
+import static net.minecraftforge.common.ToolActions.SHIELD_BLOCK;
 
 public class SolidAsARock extends TerraEnchantment {
     private static final ModConfig.SolidAsARockOptions CONFIG = FancyEnchantments.getConfig().solidAsARockOptions;
@@ -36,27 +34,17 @@ public class SolidAsARock extends TerraEnchantment {
 
     @Override
     public boolean canApplyAtEnchantingTable(ItemStack stack) {
-        return stack.canPerformAction(ToolActions.SHIELD_BLOCK);
+        return stack.canPerformAction(SHIELD_BLOCK);
     }
 
-    public void addArmor(LivingEvent.LivingTickEvent e) {
-        LivingEntity living = e.getEntity();
-        AttributeInstance armorAttr = living.getAttribute(Attributes.ARMOR);
-        AttributeInstance armorToughnessAttr = living.getAttribute(Attributes.ARMOR_TOUGHNESS);
-        if (armorAttr != null) {
-            armorAttr.removeModifier(SOLID_AS_A_ROCK_UUID);
-        }
-        if (armorToughnessAttr != null) {
-            armorToughnessAttr.removeModifier(SOLID_AS_A_ROCK_UUID);
-        }
-        int level = EnchantmentHelper.getEnchantmentLevel(this, living);
-        if (level > 0) {
-            if (armorAttr != null) {
-                armorAttr.addTransientModifier(new AttributeModifier(SOLID_AS_A_ROCK_UUID, SOLID_AS_A_ROCK_NAME, 1.0f + CONFIG.armorMultiplier * level, AttributeModifier.Operation.MULTIPLY_TOTAL));
-            }
-            if (armorToughnessAttr != null) {
-                armorToughnessAttr.addTransientModifier(new AttributeModifier(SOLID_AS_A_ROCK_UUID, SOLID_AS_A_ROCK_NAME, 1.0f + CONFIG.toughnessMultiplier * level, AttributeModifier.Operation.MULTIPLY_TOTAL));
-            }
+    public void addArmor(ItemAttributeModifierEvent e) {
+        int level = e.getItemStack().getEnchantmentLevel(this);
+        ItemStack stack = e.getItemStack();
+        if (!(stack.getItem() instanceof ShieldItem) && !stack.canPerformAction(SHIELD_BLOCK))
+            return;
+        if (level > 0 && (e.getSlotType() == EquipmentSlot.MAINHAND || e.getSlotType() == EquipmentSlot.OFFHAND)) {
+            e.addModifier(Attributes.ARMOR, new AttributeModifier(SOLID_AS_A_ROCK_UUID, SOLID_AS_A_ROCK_NAME, CONFIG.armorMultiplier * level, AttributeModifier.Operation.MULTIPLY_TOTAL));
+            e.addModifier(Attributes.ARMOR_TOUGHNESS, new AttributeModifier(SOLID_AS_A_ROCK_UUID, SOLID_AS_A_ROCK_NAME, CONFIG.toughnessMultiplier * level, AttributeModifier.Operation.MULTIPLY_TOTAL));
         }
     }
 }
