@@ -4,14 +4,13 @@ import com.foolsix.fancyenchantments.enchantment.*;
 import net.minecraft.ChatFormatting;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
-import net.minecraft.util.RandomSource;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.item.BookItem;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.phys.EntityHitResult;
 import net.minecraft.world.phys.HitResult;
+import net.minecraftforge.event.ItemAttributeModifierEvent;
 import net.minecraftforge.event.TickEvent;
 import net.minecraftforge.event.entity.ProjectileImpactEvent;
 import net.minecraftforge.event.entity.living.*;
@@ -72,7 +71,6 @@ public class EnchantmentEvents {
     @SubscribeEvent
     public void livingEvent(LivingEvent.LivingTickEvent e) {
         ((Lightness) LIGHTNESS.get()).livingEvent(e);
-        ((SolidAsARock) SOLID_AS_A_ROCK.get()).addArmor(e);
         ((OceanCurrent) OCEAN_CURRENT.get()).attackSpeedBoost(e);
     }
 
@@ -106,5 +104,13 @@ public class EnchantmentEvents {
         ((Empathy) EMPATHY.get()).throwPlayer(e);
     }
 
+    @SubscribeEvent
+    public void itemAttributeModifierEvent(ItemAttributeModifierEvent e) {
+        if (e.getItemStack() == null) return;
+
+        ((WindBlade) WIND_BLADE.get()).damageReduce(e);
+        ((HeavyBlow) HEAVY_BLOW.get()).attackSpeedReduce(e);
+        ((SolidAsARock) SOLID_AS_A_ROCK.get()).addArmor(e);
+    }
 
 }
